# fossil-project

./: README.md  meson.build
.github/workflows/: meson_ci.yml
code/: meson.build
code/logic/: app.c
code/logic/fossil/: app.h  common.h
code/media/: complex_operations.crabql  create_and_insert.crabql  delete_and_query.crabql  meson.build  namespace_operations.crabql  update_and_get.crabql
code/tests/: meson.build  test_unittest.c
code/tests/cases/: test_unittest.c
subprojects/: fossil-crabdb.wrap  fossil-io.wrap  fossil-lib.wrap
